--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/maksimn/angular_demo#readme",
   "dependencies": {
     "angular": "^1.6.6",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "express": "^4.16.2"
   }
 }
