--- a/vanilla/package.json
+++ b/vanilla/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/maksimn/angular_demo#readme",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "ejs": "^2.5.7",
     "express": "^4.16.2"
   }
 }
