--- a/vanilla/package.json
+++ b/vanilla/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/maksimn/angular_demo#readme",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "ejs": "^2.5.7",
     "express": "^4.16.2"
