--- a/vanilla/package.json
+++ b/vanilla/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "ejs": "^2.5.7",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "validator": "^9.1.1"
   }
 }
