--- a/vanilla/package.json
+++ b/vanilla/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^3.3.7",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.1.0",
     "validator": "^9.1.1"
   }
 }
