--- a/vanilla/package.json
+++ b/vanilla/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
