--- a/typescript-with-no-fws/package.json
+++ b/typescript-with-no-fws/package.json
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/maksimn/angular_demo#readme",
   "dependencies": {
+    "@types/ejs": "^2.3.33",
+    "@types/express": "^4.0.39",
+    "bootstrap": "^3.3.7",
+    "ejs": "^2.5.7",
+    "express": "^4.16.2",
     "typescript": "^2.6.1"
   }
 }
