--- a/typescript-with-no-fws/package.json
+++ b/typescript-with-no-fws/package.json
@@ -20,9 +20,16 @@
   "dependencies": {
     "@types/ejs": "^2.3.33",
     "@types/express": "^4.0.39",
+    "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
-    "typescript": "^2.6.1"
+    "jsonwebtoken": "^8.1.0",
+    "typescript": "^2.6.1",
+    "validator": "^9.1.1"
+  },
+  "devDependencies": {
+    "@types/es6-promise": "0.0.33"
   }
 }
