--- a/typescript-with-no-fws/package.json
+++ b/typescript-with-no-fws/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "",
   "scripts": {
+    "build:server": "node_modules/.bin/tsc --target ES5 app.ts",
     "build:client": "node_modules/.bin/tsc scripts/login.ts scripts/photos.ts scripts/register.ts",
-    "tsc": "node_modules/.bin/tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
