--- a/typescript-with-no-fws/package.json
+++ b/typescript-with-no-fws/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/maksimn/angular_demo#readme",
   "dependencies": {
+    "@types/body-parser": "^1.16.8",
+    "@types/cookie-parser": "^1.4.1",
     "@types/ejs": "^2.3.33",
     "@types/express": "^4.0.39",
     "body-parser": "^1.18.2",
