--- a/typescript-with-no-fws/package.json
+++ b/typescript-with-no-fws/package.json
@@ -23,6 +23,8 @@
     "@types/cookie-parser": "^1.4.1",
     "@types/ejs": "^2.3.33",
     "@types/express": "^4.0.39",
+    "@types/jsonwebtoken": "^7.2.3",
+    "@types/validator": "^6.3.0",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
