--- a/typescript-with-no-fws/package.json
+++ b/typescript-with-no-fws/package.json
@@ -35,6 +35,7 @@
     "validator": "^9.1.1"
   },
   "devDependencies": {
-    "@types/es6-promise": "0.0.33"
+    "@types/es6-promise": "0.0.33",
+    "ts-loader": "^3.1.1"
   }
 }
