--- a/typescript-with-no-fws/tsconfig.json
+++ b/typescript-with-no-fws/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
       "outDir": "./scripts/",
-      "noImplicitAny": false,
+      "noImplicitAny": true,
       "module": "es6",
       "target": "es5",
       "allowJs": true
