--- a/react-redux-ts/package.json
+++ b/react-redux-ts/package.json
@@ -27,8 +27,11 @@
     "@types/jsonwebtoken": "^7.2.3",
     "@types/react": "^16.0.25",
     "@types/react-dom": "^16.0.3",
+    "@types/react-redux": "^5.0.13",
     "@types/react-router-dom": "^4.2.2",
+    "@types/redux-logger": "^3.0.5",
     "@types/validator": "^6.3.0",
+    "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
@@ -37,10 +40,15 @@
     "jsonwebtoken": "^8.1.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
+    "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "validator": "^9.1.1"
   },
   "devDependencies": {
+    "redux-next": "reactjs/redux#next",
     "ts-loader": "^3.1.1",
     "typescript": "^2.6.1"
   }
