tsc strict flage for server-side

--- a/react-redux-ts/tsconfig.json
+++ b/react-redux-ts/tsconfig.json
@@ -1,12 +1,13 @@
 {
     "compilerOptions": {
-      "outDir": "",
-      "noImplicitAny": true,
-      "module": "CommonJS",
-      "target": "ES5",
-      "allowJs": true,
-      "inlineSourceMap": true,
-      "jsx": "react"
+        "strict": true,
+        "outDir": "",
+        "noImplicitAny": true,
+        "module": "CommonJS",
+        "target": "ES5",
+        "allowJs": true,
+        "inlineSourceMap": true,
+        "jsx": "react"
     },
     "files": [
         "app.ts"
