--- a/react-redux-ts/package.json
+++ b/react-redux-ts/package.json
@@ -24,6 +24,7 @@
     "@types/ejs": "^2.3.33",
     "@types/es6-promise": "0.0.33",
     "@types/express": "^4.0.39",
+    "@types/js-cookie": "^2.1.0",
     "@types/jsonwebtoken": "^7.2.3",
     "@types/react": "^16.0.25",
     "@types/react-dom": "^16.0.3",
@@ -37,6 +38,7 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.1.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
