--- a/react-redux-ts/package.json
+++ b/react-redux-ts/package.json
@@ -39,6 +39,9 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "gulp": "^3.9.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-open": "^2.0.0",
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.1.0",
     "react": "^16.1.1",
