webpack server build & vscode debug setup

--- a/react-redux-ts/tsconfig.json
+++ b/react-redux-ts/tsconfig.json
@@ -6,8 +6,8 @@
         "module": "CommonJS",
         "target": "ES5",
         "allowJs": true,
-        "inlineSourceMap": true,
-        "jsx": "react"
+        "jsx": "react",
+        "sourceMap": true
     },
     "files": [
         "app.ts"
