--- a/react-redux-ts/package.json
+++ b/react-redux-ts/package.json
@@ -51,7 +51,8 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "validator": "^9.1.1"
+    "validator": "^9.1.1",
+    "webpack-node-externals": "^1.6.0"
   },
   "devDependencies": {
     "ts-loader": "^3.1.1",
