--- a/react-redux-ts/package.json
+++ b/react-redux-ts/package.json
@@ -42,6 +42,7 @@
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
     "gulp-open": "^2.0.0",
+    "gulp-util": "^3.0.8",
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.1.0",
     "react": "^16.1.1",
@@ -52,6 +53,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "validator": "^9.1.1",
+    "webpack": "^3.10.0",
     "webpack-node-externals": "^1.6.0"
   },
   "devDependencies": {
