--- a/react-redux-ts/package.json
+++ b/react-redux-ts/package.json
@@ -44,14 +44,17 @@
     "gulp-open": "^2.0.0",
     "gulp-tslint": "^8.1.2",
     "gulp-util": "^3.0.8",
+    "history": "^4.7.2",
     "js-cookie": "^2.2.0",
     "jsonwebtoken": "^8.1.0",
     "react": "^16.1.1",
     "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
     "tslint": "^5.8.0",
     "validator": "^9.1.1",
