--- a/react-redux-ts/package.json
+++ b/react-redux-ts/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "",
   "scripts": {
+    "build:prod": "NODE_ENV=production webpack",
+    "build:prod:windows": "SET NODE_ENV=production webpack",
     "build:server": "node_modules/.bin/tsc",
     "start": "npm run build:server && webpack && node app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
