photo thumbnails when searching

--- a/react-redux-ts/tsconfig.json
+++ b/react-redux-ts/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "lib": [ "dom", "es6" ],
         "strict": true,
         "outDir": "",
         "noImplicitAny": true,
